Bug 731832 - Backout bug 587021 for breaking a specific web page; r=bz